--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ionic/vue-router": "^7.0.0",
     "ionicons": "^7.0.0",
     "pinia": "^2.1.6",
+    "swiper": "^10.3.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
@@ -34,8 +35,9 @@
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
+    "sass": "^1.69.4",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9",
+    "vite": "4.5.0",
     "vitest": "^0.32.2",
     "vue-tsc": "^1.0.24"
   },
